finished grass. and added move to hole